Update SHOW-HIDE CONTENT ON MOBILE.html

--- a/SHOW-HIDE CONTENT ON MOBILE.html
+++ b/SHOW-HIDE CONTENT ON MOBILE.html
@@ -5,14 +5,16 @@
       {
         .show-img-mobile{display:table-row!important;width:100%!important;float:none;overflow:visible!important;height:auto!important}
         .hide-img-mobile{display:none!important}
+      }
     </style>
   </head>
+
+  <!-- CONTENT IN THIS DIV IS VISIBLE IN DESKTOP, HIDDEN IN MOBILE -->
   <div class="hide-img-mobile">
-    <img src="https://www.imageexample.com/imageexample.jpg">
     <span>text desktop</span>
   </div>
+  <!-- CONTENT IN THIS DIV IS HIDDEN IN DESKTOP, VISIBLE IN MOBILE -->
   <div class="show-img-mobile" style="display: none; width: 0px; overflow: hidden;">
-    <img src="https://www.emailimagecdny90v.com/6lavz3dij2/en_us/images/65fb05e754ff8-1710949863.3482.jpg">
     <span>text mobile</span>
   </div> 
 </html>
